tests/ui/parser/bad-lit-suffixes.stderr
error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:4:5
   |
LL |     "C"suffix
   |     ^^^^^^^^^ invalid suffix `suffix`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:8:5
   |
LL |     "C"suffix
   |     ^^^^^^^^^ invalid suffix `suffix`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:30:17
   |
LL | #[rustc_dummy = "string"suffix]
   |                 ^^^^^^^^^^^^^^ invalid suffix `suffix`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:34:14
   |
LL | #[must_use = "string"suffix]
   |              ^^^^^^^^^^^^^^ invalid suffix `suffix`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:38:15
   |
LL | #[link(name = "string"suffix)]
   |               ^^^^^^^^^^^^^^ invalid suffix `suffix`

error: invalid suffix `suffix` for number literal
  --> $DIR/bad-lit-suffixes.rs:42:41
   |
LL | #[rustc_layout_scalar_valid_range_start(0suffix)]
   |                                         ^^^^^^^ invalid suffix `suffix`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

warning: `extern` declarations without an explicit ABI are deprecated
  --> $DIR/bad-lit-suffixes.rs:3:1
   |
LL | extern
   | ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`
   |
   = note: `#[warn(missing_abi)]` on by default

warning: `extern` declarations without an explicit ABI are deprecated
  --> $DIR/bad-lit-suffixes.rs:7:1
   |
LL | extern
   | ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:12:5
   |
LL |     ""suffix;
   |     ^^^^^^^^ invalid suffix `suffix`

error: suffixes on byte string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:13:5
   |
LL |     b""suffix;
   |     ^^^^^^^^^ invalid suffix `suffix`

error: suffixes on string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:14:5
   |
LL |     r#""#suffix;
   |     ^^^^^^^^^^^ invalid suffix `suffix`

error: suffixes on byte string literals are invalid
  --> $DIR/bad-lit-suffixes.rs:15:5
   |
LL |     br#""#suffix;
   |     ^^^^^^^^^^^^ invalid suffix `suffix`

error: suffixes on char literals are invalid
  --> $DIR/bad-lit-suffixes.rs:16:5
   |
LL |     'a'suffix;
   |     ^^^^^^^^^ invalid suffix `suffix`

error: suffixes on byte literals are invalid
  --> $DIR/bad-lit-suffixes.rs:17:5
   |
LL |     b'a'suffix;
   |     ^^^^^^^^^^ invalid suffix `suffix`

error: invalid width `1024` for integer literal
  --> $DIR/bad-lit-suffixes.rs:19:5
   |
LL |     1234u1024;
   |     ^^^^^^^^^
   |
   = help: valid widths are 8, 16, 32, 64 and 128

error: invalid width `1024` for integer literal
  --> $DIR/bad-lit-suffixes.rs:20:5
   |
LL |     1234i1024;
   |     ^^^^^^^^^
   |
   = help: valid widths are 8, 16, 32, 64 and 128

error: invalid width `1024` for float literal
  --> $DIR/bad-lit-suffixes.rs:21:5
   |
LL |     1234f1024;
   |     ^^^^^^^^^
   |
   = help: valid widths are 32 and 64

error: invalid width `1024` for float literal
  --> $DIR/bad-lit-suffixes.rs:22:5
   |
LL |     1234.5f1024;
   |     ^^^^^^^^^^^
   |
   = help: valid widths are 32 and 64

error: invalid suffix `suffix` for number literal
  --> $DIR/bad-lit-suffixes.rs:24:5
   |
LL |     1234suffix;
   |     ^^^^^^^^^^ invalid suffix `suffix`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `suffix` for number literal
  --> $DIR/bad-lit-suffixes.rs:25:5
   |
LL |     0b101suffix;
   |     ^^^^^^^^^^^ invalid suffix `suffix`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `suffix` for float literal
  --> $DIR/bad-lit-suffixes.rs:26:5
   |
LL |     1.0suffix;
   |     ^^^^^^^^^ invalid suffix `suffix`
   |
   = help: valid suffixes are `f32` and `f64`

error: invalid suffix `suffix` for float literal
  --> $DIR/bad-lit-suffixes.rs:27:5
   |
LL |     1.0e10suffix;
   |     ^^^^^^^^^^^^ invalid suffix `suffix`
   |
   = help: valid suffixes are `f32` and `f64`

error: aborting due to 20 previous errors; 2 warnings emitted

